test/libhyperion/syntaxTests/variableDeclaration/while.hyp
pragma hyperion >=0.1.0;

contract C
{
	function f(uint x) public pure {
		while (x > 0)
			uint y;
	}
}
// ----
// SyntaxError 9079: (92-98): Variable declarations can only be used inside blocks.
